# citibike-analysis

./: .gitignore  README.md  pyproject.toml
data/data_model/: exposure_master.parquet
data/data_raw_processed/: nypd_raw.parquet
data/data_spatial/: nypd_spatial_granular.parquet  spatial_master.parquet
data/data_temporal/: nypd_temporal.parquet
notebooks/eda/: 02A_citibike_data_preparation.ipynb  02A_nypd_data_preparation.ipynb  02B_temporal_exploration.ipynb
notebooks/modeling/: 03_hypothesis_validation.ipynb  04_risk_modeling.ipynb  04_risk_modeling_glm.ipynb
src/citibike_analysis/utils/: load_data.py  model_summary.py  paths.py
utils/: load_data.py  paths.py
