[project]
name = "citibike-analysis"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy==1.26.4",
    "matplotlib",
    "seaborn",
    "ipykernel",
    "pyarrow",
    "contextily",
    "pyproj",
    "scipy",
    "statsmodels"
]

# Markiert dieses Projekt als installierbares Python-Paket
[tool.uv]
package = true
